--- a/Nedeljni_V_Kristina_Garcia_Francisco/Nedeljni_V_Kristina_Garcia_Francisco.csproj
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/Nedeljni_V_Kristina_Garcia_Francisco.csproj
@@ -134,6 +134,7 @@
     <Compile Include="ViewModel\AllUsersViewModel.cs" />
     <Compile Include="ViewModel\ItemMenu.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\ProfileViewModel.cs" />
     <Compile Include="ViewModel\Subitem.cs" />
     <Compile Include="ViewModel\UserWindowViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
@@ -157,6 +158,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataAccess\UserData.cs" />
+    <Compile Include="View\ProfileWindow.xaml.cs">
+      <DependentUpon>ProfileWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\UserControlMenuItem.xaml.cs">
       <DependentUpon>UserControlMenuItem.xaml</DependentUpon>
     </Compile>
@@ -180,6 +184,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\LoginWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ProfileWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
