Added password change

--- a/Nedeljni_V_Kristina_Garcia_Francisco/Nedeljni_V_Kristina_Garcia_Francisco.csproj
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/Nedeljni_V_Kristina_Garcia_Francisco.csproj
@@ -250,6 +250,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\Picture\account.jpg" />
     <Content Include="DDL\DDL.sql" />
     <Content Include="Model\BetweenUsDB.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
