Fixed main page refresh bug

--- a/Nedeljni_V_Kristina_Garcia_Francisco/App.config
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="BetweenUsDBEntities" connectionString="metadata=res://*/Model.BetweenUsDB.csdl|res://*/Model.BetweenUsDB.ssdl|res://*/Model.BetweenUsDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=BetweenUsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BetweenUsDBEntities" connectionString="metadata=res://*/Model.BetweenUsDB.csdl|res://*/Model.BetweenUsDB.ssdl|res://*/Model.BetweenUsDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=BetweenUsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
